[package]
name = "reddix"
version = "0.2.10"
edition = "2021"
license = "MIT"
description = "Reddix - Reddit, refined for the terminal."
repository = "https://github.com/ck-zhang/reddix"
homepage = "https://github.com/ck-zhang/reddix"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
dirs = "5.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
url = "2.5"
percent-encoding = "2.3"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"
tiny_http = "0.12"
chrono = { version = "0.4", features = ["serde", "clock"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
parking_lot = "0.12"
once_cell = "1.19"
pulldown-cmark = "0.10"
ratatui = "0.26"
crossterm = "0.27"
webbrowser = "0.8"
humantime = "2.1"
humantime-serde = "1.1"
regex = "1.10"
indicatif = "0.17"
textwrap = "0.16"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
tempfile = "3.10"
walkdir = "2.5"
crossbeam-channel = "0.5"
fuzzy-matcher = "0.3"
hex = "0.4"
tree_magic_mini = "3.2"
libc = "0.2"
unicode-width = "0.1"
semver = "1.0"
arboard = "3.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
